force-app/main/default/objects/VTXY_EntitlementAudit__c/VTXY_EntitlementAudit__c.object-meta.xml
<CustomObject>
    <label>Entitlement Audit</label>
    <nameField>
        <label>Entitlement Audit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Entitlement Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>