force-app/main/default/objects/VTXY_EntitlementAudit__c/fields/ChangedBy__c.field-meta.xml
<CustomField>
    <fullName>ChangedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Control center user.</description>
    <label>Changed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>EntitleAment_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>