force-app/main/default/objects/VTXY_EntitlementAudit__c/fields/ChangeType__c.field-meta.xml
<CustomField>
    <fullName>ChangeType__c</fullName>
    <label>Change Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Plan Change</fullName>
            </value>
            <value>
                <fullName>Feature Change</fullName>
            </value>
            <value>
                <fullName>Status Change</fullName>
            </value>
            <value>
                <fullName>Limit Change</fullName>
            </value>
            <value>
                <fullName>Provider Assignment.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>