force-app/main/default/objects/VTXY_EntitlementAudit__c/fields/EffectiveAt__c.field-meta.xml
<CustomField>
    <fullName>EffectiveAt__c</fullName>
    <description>Effective timestamp.</description>
    <label>Effective At</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>