force-app/main/default/objects/VTXY_EntitlementAudit__c/fields/SubscriberOrg__c.field-meta.xml
<CustomField>
    <fullName>SubscriberOrg__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Subscriber</description>
    <label>Subscriber Org</label>
    <referenceTo>VTXY_SubscriberOrg__c</referenceTo>
    <relationshipLabel>EntitleAment Audits</relationshipLabel>
    <relationshipName>EntitleAment_Audits</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>